fix: hide overflow-y on category tabs

--- a/src/components/menu/header.module.css
+++ b/src/components/menu/header.module.css
@@ -2,4 +2,5 @@
     white-space: nowrap;
     flex-wrap: nowrap;
     overflow-x: auto;
+    overflow-y: hidden;
 }
